# src/main/java/com/example/demon/controller/AuthController.java
@@ -8,6 +8,7 @@ import com.example.demon.model.User;
 import com.example.demon.security.JwtUtil;
 import com.example.demon.service.UserService;
 import io.swagger.v3.oas.annotations.Operation;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.http.ResponseEntity;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -30,12 +31,15 @@ public class AuthController {
         this.jwtUtil = jwtUtil;
     }
 
+
     @Operation(summary = "Регистрация нового пользователя")
     @PostMapping("/register")
     public ResponseEntity<AuthResponse> register(@RequestBody User user) {
         boolean success = userService.register(user);
-        if (success) return ResponseEntity.ok(new AuthResponse(null, "Регистрация успешна!"));
-        return ResponseEntity.badRequest().body(new AuthResponse(null,"Ошибка регистрации"));
+        if (success) {
+            return ResponseEntity.ok(new AuthResponse(null, null, "Регистрация успешна!"));
+        }
+        return ResponseEntity.badRequest().body(new AuthResponse(null, null, "Ошибка регистрации"));
     }
 
     @PostMapping("/login")
@@ -44,11 +48,32 @@ public class AuthController {
 
         if (user.isPresent() && user.get().getPassword().equals(request.getPassword())) {
             String token = jwtUtil.generateToken(user.get().getUsername());
-            return ResponseEntity.ok(new AuthResponse(token, "Вход успешен"));
+            String refreshToken = jwtUtil.generateRefreshToken(user.get().getUsername());
+
+            return ResponseEntity.ok(new AuthResponse(token, refreshToken, "Вход успешен"));
         }
 
-        return ResponseEntity.status(401).body(new AuthResponse("Ошибка входа: неверный логин или пароль"));
+        return ResponseEntity.status(401).body(new AuthResponse(null, null, "Ошибка входа: неверный логин или пароль"));
     }
+    @PostMapping("/refresh")
+    public ResponseEntity<?> refresh(@RequestBody Map<String, String> body) {
+        String refreshToken = body.get("refreshToken");
+
+        try {
+            String username = jwtUtil.extractUsername(refreshToken);
+
+            if (jwtUtil.validateToken(refreshToken)) {
+                String newAccessToken = jwtUtil.generateToken(username);
+                return ResponseEntity.ok(Map.of("token", newAccessToken));
+            } else {
+                return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Недействительный токен");
+            }
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Ошибка при обновлении токена");
+        }
+    }
+
+
 
 
     @GetMapping("/user/{username}")
